--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-sass": "0.4.0",
     "grunt-contrib-watch": "*",
     "grunt-contrib-jade": "*",
+    "grunt-yaml": "*",
     "grunt-contrib-jshint": "*",
     "grunt-contrib-uglify": "*",
     "grunt-autoprefixer": "0.6.4",
