--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -7,7 +7,13 @@ projects:
         image: ''
         leader: The BYU Museum of Art
         text: ' wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.'
-        slides: []
+        slides:
+        -   image: img/sg_nav
+            alt: ''
+            specs:
+            -   title: Navigation
+                list:
+                - info here
 
 # BYU Web ####################
 
@@ -64,6 +70,7 @@ projects:
         slides:
 
         -   image: img/jonah1
+            alt: ''
             specs:
             -   title: Process
                 list:
@@ -80,6 +87,7 @@ projects:
                 - 2005
 
         -   image: img/jonah2
+            alt: ''
             specs:
             -   title: Process
                 list:
