--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -8,7 +8,7 @@ projects:
         leader: The BYU Museum of Art
         text: ' wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.'
         slides:
-        -   image: img/sg_nav
+        -   image: sg_nav
             alt: ''
             specs:
             -   title: Navigation
@@ -69,7 +69,7 @@ projects:
         text: ' relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.'
         slides:
 
-        -   image: img/jonah1
+        -   image: jonah1
             alt: ''
             specs:
             -   title: Process
@@ -86,7 +86,7 @@ projects:
                 - 4 ¾" × 6 ¾" × ¾"
                 - 2005
 
-        -   image: img/jonah2
+        -   image: jonah2
             alt: ''
             specs:
             -   title: Process
