--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -9,6 +9,7 @@ projects:
         text: ' wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least tech-savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.'
         slides:
         -   image: sg_nav
+            ext: .jpg
             alt: ''
             specs:
             -   title: Navigation
@@ -70,6 +71,7 @@ projects:
         slides:
 
         -   image: jonah1
+            ext: .jpg
             alt: ''
             specs:
             -   title: Process
@@ -87,6 +89,7 @@ projects:
                 - 2005
 
         -   image: jonah2
+            ext: .jpg
             alt: ''
             specs:
             -   title: Process
