--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -42,6 +42,14 @@ projects:
         leader: For my MFA thesis 
         text: ' I spent a semester in the IU Lilly Special Collections Library soaking in some of the most beautiful works ever created in print. I designed a library exhibition highlighting many of them, including the <i>Bruce Rogers World Bible</i>, Eric Gill’s <i>Four Gospels</i>, masterpieces from the Kelmscott and Doves presses, Limited Editions and Grolier Club releases, Philip Smith bindings, books illustrated by Picasson and Braqua, and other breathtaking books.'
         slides:
+        -   image: thesis_cards
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: thesis_brochure
+            ext: .jpg
+            alt: ''
+            specs: []
         -   image: thesis_bible
             ext: .jpg
             alt: ''
@@ -73,14 +81,6 @@ projects:
             ext: .jpg
             alt: ''
             specs: []
-        -   image: thesis_cards
-            ext: .jpg
-            alt: ''
-            specs: []
-        -   image: thesis_brochure
-            ext: .jpg
-            alt: ''
-            specs: []
 
 
 
@@ -92,11 +92,11 @@ projects:
         leader: I’ve been fascinated with insects 
         text: ' ever since my freshman Biology class. So when the idea struck me that both <i>type</i> and <i>bug</i> collections contain specimens, I went to work on some typographic insects. The result is one of my favorite projects I’ve ever done.'
         slides:
-        -   image: bugs1
+        -   image: bugs_typographic
             ext: .jpg
             alt: ''
             specs: []
-        -   image: bugs2
+        -   image: bugs_fabulous
             ext: .jpg
             alt: ''
             specs: []
@@ -104,11 +104,11 @@ projects:
             ext: .jpg
             alt: ''
             specs: []
-        -   image: bugs_tiny
+        -   image: bugs2
             ext: .jpg
             alt: ''
             specs: []
-        -   image: bugs_typographic
+        -   image: bugs1
             ext: .jpg
             alt: ''
             specs: []
@@ -122,15 +122,15 @@ projects:
         leader: This letterpress broadside 
         text: ' was created to celebrate marriage. The text was taken from CS Lewis (<i>Mere Christianity</i>) It was the first thing printed from some gorgeous new 24pt Centaur type that we acquired, and it’s accented by a light woodcut illustration.'
         slides:
-        -   image: love
-            ext: .jpg
-            alt: ''
-            specs: []
         -   image: love1
             ext: .jpg
             alt: ''
             specs: []
         -   image: love2
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: love
             ext: .jpg
             alt: ''
             specs: []
