--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -257,7 +257,7 @@ projects:
         text: ' relief printing to other traditional media, maybe because it works so well with letterpress. This book has 20 linocut illustrations from the book of Jonah, with images and type printed on a Vandercook SP-15 proof press.'
         slides:
 
-        -   image: jonah1
+        -   image: jonah_cover2
             ext: .jpg
             alt: ''
             specs:
@@ -274,8 +274,23 @@ projects:
                 list:
                 - 4 ¾" × 6 ¾" × ¾"
                 - 2005
-
-        -   image: jonah2
+        -   image: jonah_case2
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: jonah_pray
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: jonah_storm2
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: jonah_beach3
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: jonah_colophon
             ext: .jpg
             alt: ''
             specs:
@@ -293,6 +308,7 @@ projects:
                 - 4 ¾" × 6 ¾" × ¾"
                 - 24 pages
                 - 2005
+
 
 # Ornate ####################
 
