Add student images, update portfolio images

--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -8,6 +8,7 @@ projects:
 
     -   title: Sacred Gifts
         id: gifts
+        thumbnail: 0
         image: 'sg.png'
         desc: Interface Design
         capoffset: -0.24em
@@ -16,7 +17,21 @@ projects:
         leader: he BYU Museum of Art
         text: ' wanted an iPad app to supplement and enhance the experience of their <i>Sacred Gifts</i> exhibition. The interface was meant to be easy to use (by even the least savvy patrons) and to maintain focus, both visually and conceptually, on the artwork.'
         slides:
-        -   image: sg_nav
+        -   image: sg_home
+            ext: .jpg
+            alt: ''
+            specs:
+            -   title: Home screen
+                list:
+                - info here
+        -   image: sg_tombstone
+            ext: .jpg
+            alt: ''
+            specs:
+            -   title: Navigation
+                list:
+                - info here
+        -   image: sg_media
             ext: .jpg
             alt: ''
             specs:
@@ -28,6 +43,7 @@ projects:
 
     -   title: BYU Web
         id: byu
+        thumbnail: 0
         image: byu.png
         desc: Web Design
         capoffset: -0.1em
@@ -54,6 +70,7 @@ projects:
 
     -   title: BYU Tickets
         id: byutickets
+        thumbnail: 0
         image: ''
         desc: Web Design
         capoffset: -0.24em
@@ -75,6 +92,7 @@ projects:
 
     -   title: BYU Learning Suite
         id: ls
+        thumbnail: 0
         image: ''
         desc: Interface Design
         capoffset: 0
@@ -91,10 +109,6 @@ projects:
             ext: .png
             alt: ''
             specs: []
-        -   image: ls-grader-exam-essay
-            ext: .png
-            alt: ''
-            specs: []
         -   image: ls-grader
             ext: .png
             alt: ''
@@ -105,6 +119,7 @@ projects:
 
     -   title: Connections
         id: thesis
+        thumbnail: 0
         image: 'fraluca.png'
         desc: Exhibition Design
         capoffset: -0.25em
@@ -118,6 +133,10 @@ projects:
             alt: ''
             specs: []
         -   image: thesis_brochure
+            ext: .jpg
+            alt: ''
+            specs: []
+        -   image: thesis-all
             ext: .jpg
             alt: ''
             specs: []
@@ -197,6 +216,7 @@ projects:
 
     -   title: Specimens
         id: bugs
+        thumbnail: 1
         image: cicada.png
         desc: Poster / Self-promotion
         capoffset: -0.2em
@@ -223,6 +243,7 @@ projects:
 
     -   title: Love
         id: love
+        thumbnail: 0
         image: 'ornament.png'
         desc: Letterpress
         capoffset: -0.24em
@@ -252,6 +273,7 @@ projects:
 
     -   title: Jonah
         id: jonah
+        thumbnail: 3
         image: jonah.png
         desc: Letterpress / Linocut / Bookbinding
         capoffset: 0
@@ -318,6 +340,7 @@ projects:
 
     -   title: Ornate
         id: ornate
+        thumbnail: 0
         image: ''
         desc: Research / Writing / Publication Design
         capoffset: 0
