--- a/data/students.yml
+++ b/data/students.yml
@@ -8,6 +8,7 @@ projects:
 
     -   title: Sacred Gifts
         id: gifts
+        thumbnail: 0
         image: 'sg.png'
         desc: Interface Design
         capoffset: -0.24em
